--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
 	"name": "confusion",
 	"version": "1.0.0",
 	"description": "This is a website for Ristorante Con Fusion",
-	"main": "index.jsp",
+	"main": "index.html",
 	"scripts": {
 		"start": "npm run lite",
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"lite": "lite-server"
+		"lite": "lite-server",
 		"scss": "node-sass -o css/ css/"
 	},
 	"author": "",
